--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
     "    return num, name\n",
     "\n",
     "# for i in range(len(df)): # type: ignore\n",
-    "for i in range(100): # type: ignore\n",
+    "for i in range(10): # type: ignore\n",
     "    num, name = get_category_subcategory(df, i); num = str(num)\n",
     "    \n",
     "    try:\n",
@@ -519,14 +519,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (22, 'food999'), (187, 'Agriculture'), (188, 'Agricultural Equipment'), (189, 'Agricultural Greenhouses'), (190, 'Aquaculture Equipment'), (191, 'Aquaculture Trap'), (192, 'Fishing Float'), (193, 'Fishing Net'), (194, 'Fishing Rope'), (195, 'Other Aquaculture Equipment'), (196, 'Ear Tag'), (197, 'Agricultural Growing Media'), (198, 'Peat'), (199, 'Agricultural Product Stock'), (200, 'Agricultural Waste'), (201, 'Animal Extract'), (202, 'Animal Feed'), (203, 'Animal Products'), (204, 'Eggs'), (205, 'Fowl & Livestock'), (206, 'Bamboo Raw Materials'), (207, 'Bean-Like Seeds'), (208, 'Cacao'), (209, 'Coffee Beans'), (210, 'Vanilla Beans'), (211, 'Beans'), (212, 'Broad Beans'), (213, 'Butter Beans'), (214, 'Chickpeas'), (215, 'Kidney Beans'), (216, 'Lentils'), (217, 'Lima Beans'), (218, 'Other Beans'), (219, 'Peas'), (220, 'Soybeans'), (221, 'Vigna Beans'), (222, 'Cigarettes'), (223, 'Cigars'), (224, 'Fresh Fruit'), (225, 'Fresh Apples'), (226, 'Fresh Apricots'), (227, 'Fresh Avocados'), (228, 'Fresh Bananas'), (229, 'Fresh Berries'), (230, 'Fresh Cherries'), (231, 'Fresh Citrus Fruit'), (232, 'Fresh Coconuts'), (233, 'Fresh Dragon Fruit'), (234, 'Fresh Durians'), (235, 'Fresh Grapes'), (236, 'Fresh Guava'), (237, 'Fresh Kiwi Fruit'), (238, 'Fresh Mangos'), (239, 'Fresh Melons'), (240, 'Fresh Olives'), (241, 'Fresh Papaya'), (242, 'Fresh Peaches'), (243, 'Fresh Pears'), (244, 'Fresh Pineapples'), (245, 'Fresh Plums'), (246, 'Fresh Pomegranates'), (247, 'Other Fresh Fruit'), (248, 'Fresh Vegetables'), (249, 'Fresh Asparagus'), (250, 'Fresh Broccoli'), (251, 'Fresh Burdock'), (252, 'Fresh Cabbages'), (253, 'Fresh Capsicum'), (254, 'Fresh Carrots'), (255, 'Fresh Cassava'), (256, 'Fresh Cauliflower'), (257, 'Fresh Celery Cabbage'), (258, 'Fresh Cucumber'), (259, 'Fresh Garlic'), (260, 'Fresh Ginger'), (261, 'Fresh Okra'), (262, 'Fresh Onions'), (263, 'Fresh Potatoes'), (264, 'Fresh Pumpkins'), (265, 'Fresh Radish'), (266, 'Fresh Scallions'), (267, 'Fresh Sweet Potatoes'), (268, 'Fresh Taro'), (269, 'Fresh Tomatoes'), (270, 'Other Fresh Vegetables'), (271, 'Grain'), (272, 'Barley'), (273, 'Buckwheat'), (274, 'Corn'), (275, 'Millet'), (276, 'Oats'), (277, 'Other Grain'), (278, 'Quinoa'), (279, 'Rice'), (280, 'Rye'), (281, 'Sorghum'), (282, 'Wheat'), (283, 'Logs'), (284, 'Mushrooms & Truffles'), (285, 'Mushrooms'), (286, 'Truffles')]\n"
+      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (22, 'food999'), (387, 'Agriculture'), (388, 'Agricultural Equipment'), (389, 'Agricultural Greenhouses'), (390, 'Aquaculture Equipment'), (391, 'Aquaculture Trap'), (392, 'Fishing Float'), (393, 'Fishing Net'), (394, 'Fishing Rope'), (395, 'Other Aquaculture Equipment'), (396, 'Ear Tag')]\n"
      ]
     }
    ],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
