--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,9 @@
     "    num, name = get_category_subcategory(df, i); num = str(num)\n",
     "    \n",
     "    cursor.execute(\"\"\"select * from \"Categories\" c\"\"\")\n",
-    "    cursor.execute(\"\"\"insert into \"Categories\" (category_id, category) values (\"\"\" + num + \"\"\", '\"\"\" + name + \"\"\"')\"\"\") # type: ignore"
+    "    cursor.execute(\"\"\"insert into \"Categories\" (category_id, category) values (\"\"\" + num + \"\"\", '\"\"\" + name + \"\"\"')\"\"\") # type: ignore\n",
+    "\n",
+    "# con.commit()"
    ]
   },
   {
@@ -479,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -514,19 +516,21 @@
     "    except psycopg2.errors.UniqueViolation as e:\n",
     "        listOfCollisions.append(i)\n",
     "\n",
+    "con.commit() # add this to make it the real thing\n",
+    "\n",
     "print(listOfCollisions.__sizeof__())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (22, 'food999'), (387, 'Agriculture'), (388, 'Agricultural Equipment'), (389, 'Agricultural Greenhouses'), (390, 'Aquaculture Equipment'), (391, 'Aquaculture Trap'), (392, 'Fishing Float'), (393, 'Fishing Net'), (394, 'Fishing Rope'), (395, 'Other Aquaculture Equipment'), (396, 'Ear Tag')]\n"
+      "[(3, 'food2'), (4, 'food'), (6, 'food9'), (8, 'food99'), (22, 'food999'), (398, 'Agriculture'), (399, 'Agricultural Equipment'), (400, 'Agricultural Greenhouses'), (401, 'Aquaculture Equipment'), (402, 'Aquaculture Trap'), (403, 'Fishing Float'), (404, 'Fishing Net'), (405, 'Fishing Rope'), (406, 'Other Aquaculture Equipment'), (407, 'Ear Tag')]\n"
      ]
     }
    ],
@@ -537,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
