make method & clean

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -533,7 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Another issue? lets try going a couple hundred terms at a time"
+    "    Another issue? Lets try going a couple hundred terms at a time, & Im gonna clean up the code while we're at it"
    ]
   },
   {
@@ -541,7 +541,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def process_categories(df, cursor, con, start, end):\n",
+    "    listOfCollisions = []\n",
+    "\n",
+    "    def get_category_subcategory(df, index):\n",
+    "        num = df.loc[index, 'Ser']\n",
+    "        name = df.loc[index, 'combined']\n",
+    "        return num, name\n",
+    "\n",
+    "    for i in range(start, end):\n",
+    "        num, name = get_category_subcategory(df, i)\n",
+    "        num = str(num)\n",
+    "\n",
+    "        try:\n",
+    "            cursor.execute(\"\"\"INSERT INTO \"Categories\" (category_id, category) VALUES (%s, %s)\"\"\", (num, name))\n",
+    "        except psycopg2.errors.UniqueViolation as e:\n",
+    "            listOfCollisions.append(i)\n",
+    "        except Exception as e:\n",
+    "            print(f\"An unexpected error occurred: {e}\")\n",
+    "\n",
+    "    con.commit()\n",
+    "\n",
+    "    print(len(listOfCollisions)); return listOfCollisions"
+   ]
   },
   {
    "cell_type": "code",
@@ -567,7 +591,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.close()"
+    "cursor.close()\n",
+    "con.close()"
    ]
   },
   {
