--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,6 +565,71 @@
     "    con.commit()\n",
     "\n",
     "    print(len(listOfCollisions)); return listOfCollisions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[67], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m collisions \u001b[38;5;241m=\u001b[39m \u001b[43mprocess_categories\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcursor\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcon\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[65], line 14\u001b[0m, in \u001b[0;36mprocess_categories\u001b[1;34m(df, cursor, con, start, end)\u001b[0m\n\u001b[0;32m     11\u001b[0m num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(num)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 14\u001b[0m     \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43mINSERT INTO \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mCategories\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m (category_id, category) VALUES (\u001b[39;49m\u001b[38;5;132;43;01m%s\u001b[39;49;00m\u001b[38;5;124;43m, \u001b[39;49m\u001b[38;5;132;43;01m%s\u001b[39;49;00m\u001b[38;5;124;43m)\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m psycopg2\u001b[38;5;241m.\u001b[39merrors\u001b[38;5;241m.\u001b[39mUniqueViolation \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     16\u001b[0m     listOfCollisions\u001b[38;5;241m.\u001b[39mappend(i)\n",
+      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_3.12.1008.0_x64__qbz5n2kfra8p0\\Lib\\encodings\\utf_8.py:15\u001b[0m, in \u001b[0;36mdecode\u001b[1;34m(input, errors)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m### Codec APIs\u001b[39;00m\n\u001b[0;32m     13\u001b[0m encode \u001b[38;5;241m=\u001b[39m codecs\u001b[38;5;241m.\u001b[39mutf_8_encode\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28minput\u001b[39m, errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstrict\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m codecs\u001b[38;5;241m.\u001b[39mutf_8_decode(\u001b[38;5;28minput\u001b[39m, errors, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mIncrementalEncoder\u001b[39;00m(codecs\u001b[38;5;241m.\u001b[39mIncrementalEncoder):\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "collisions = process_categories(df, cursor, con, 0, 100)\n"
    ]
   },
   {
