jam found in 301 350

--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -956,6 +956,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Now lets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "collisions = process_categories(df, cursor, con, 201, 250)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "collisions = process_categories(df, cursor, con, 251, 300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "An unexpected error occurred: current transaction is aborted, commands ignored until end of transaction block\n",
+      "\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "collisions = process_categories(df, cursor, con, 301, 350)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Theres the issue, one of the early 300's is messing this up, lets take a look at the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
