--- a/db upload/DataBase upload NB.ipynb
+++ b/db upload/DataBase upload NB.ipynb
@@ -1044,6 +1044,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Ser                       combined\n",
+      "300  301                       Tag Guns\n",
+      "301  302                      Tank Tops\n",
+      "302  303                      Underwear\n",
+      "303  304               Bra & Brief Sets\n",
+      "304  305                           Bras\n",
+      "305  306                      Camisoles\n",
+      "306  307                   Garters Belt\n",
+      "307  308                     Long Johns\n",
+      "308  309         Men\\'s Briefs & Boxers\n",
+      "309  310                Other Underwear\n",
+      "310  311                 Sexy Underwear\n",
+      "311  312                        Shapers\n",
+      "312  313               Women\\'s Panties\n",
+      "313  314                       Uniforms\n",
+      "314  315               Airline Uniforms\n",
+      "315  316                  Bank Uniforms\n",
+      "316  317               Fireman Uniforms\n",
+      "317  318                 Guard Uniforms\n",
+      "318  319              Hospital Uniforms\n",
+      "319  320                 Hotel Uniforms\n",
+      "320  321              Military Uniforms\n",
+      "321  322                 Other Uniforms\n",
+      "322  323             Promotion Uniforms\n",
+      "323  324      Restaurant & Bar Uniforms\n",
+      "324  325                School Uniforms\n",
+      "325  326                   Used Clothes\n",
+      "326  327             Vests & Waistcoats\n",
+      "327  328  Wedding Apparel & Accessories\n",
+      "328  329             Bridesmaid Dresses\n",
+      "329  330         Flower Girls\\' Dresses\n",
+      "330  331          Other Wedding Apparel\n",
+      "331  332            Wedding Accessories\n",
+      "332  333                  Bridal Gloves\n",
+      "333  334                   Bridal Veils\n",
+      "334  335                     Petticoats\n",
+      "335  336                Wedding Dresses\n",
+      "336  337        Wedding Jackets \\/ Wrap\n",
+      "337  338                       Workwear\n",
+      "338  339                               \n",
+      "339  340                               \n",
+      "340  341     Automobiles & Motorcycle s\n",
+      "341  342                            ATV\n",
+      "342  343                      ATV Parts\n",
+      "343  344                Auto Drivetrain\n",
+      "344  345                    Auto Clutch\n",
+      "345  346                          Axles\n",
+      "346  347                   Brake System\n",
+      "347  348                      Car Tires\n",
+      "348  349                     Car Wheels\n",
+      "349  350                   Drive Shafts\n",
+      "350  351          Other Auto Drivetrain\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[300:351])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [
